# Coherent-Line-Drawing

CUDA/: CMakeLists.txt  Coherent-Line-Drawing
CUDA/src/: ETF.cu
OpenMP/include/: ETF.h  gui.h
OpenMP/src/: CLD.cpp  ETF.cpp  gui.cpp
Serial/: CMakeLists.txt
Serial/include/: ETF.h
Serial/src/: CLD.cpp  ETF.cpp  main.cpp
